--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Kan@2911
 #spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 spring.jpa.show-sql=true
 books.max_allowed=3
 books.max_allowed_days=15
